        - All callback functions now forward reference arguments correctly:
          there is no longer any need to pass via std::ref() or std::cref().
        - Removed REGINA_API and associated macros.
    ENGINE:
        Class AbelianGroup:
            - Added a move constructor and move assignment operator.
            - Added a presentation matrix constructor.
            - Added member and global swap() functions.
            - Added tightEncode() and tightEncoding() to help with perfect
              hashing.
            - Replaced the old addTorsionElement() and addTorsionElements()
              with a simpler and much faster addTorsion().  The old routines
              are kept but deprecated, and are reimplemented using addTorsion().
            - The chain complex constructors now explicitly check that
              the two matrices have compatible dimensions, and throw an
              exception if this is not true.
        Enum AngleAlgFlags, Class AngleAlg:
            - New flags to specifiy angle structure enumeration algorithms.
        Class AngleStructure, AngleStructureVector:
            - Angle structures now hold a snapshot of the underlying
              triangulation at the time of creation.  The triangulation
              that was originally used can be safely modified or even deleted.
            - The internal vector representation now uses Integer, not
              LargeInteger.
            - The class AngleStructureVector has been removed completely.
              Just use Vector<Integer> instead.
            - Replaced rawVector() with vector(), which now returns a reference
              (not a pointer) and is now accessible through python.  The old
              rawVector() is kept but deprecated, and returns by reference also.
            - AngleStructure now has copy and move constructors, copy and move
              assignment, and member and global swap() functions.  The old